@@ -12,6 +12,7 @@ Changes in JMurmel-1.4 relative to JMurmel-1.3.1
 
  * mlib: added the functions parse, parse-integer, min, max,
    string-replace, string-split, string-join
+ * mlib: added gethash, remhash, "(setf (gethash..."
 
 
 Changes in JMurmel-1.3.1 relative to JMurmel-1.3
